tests/integration/per_document_grammar/type_system/single_choice/validation/01_invalid_value/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Requirement field has an invalid SingleChoice value: E
CHECK: Location: {{.*}}input.sdoc:12:1
CHECK: Hint: Problematic field: CHOICE_FIELD. Compare with the document grammar: [CHOICE_FIELD] for type: REQUIREMENT
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
